<?xml version="1.0"?>
<package format="2">
  <name>rqt_marine_radar</name>
  <version>0.0.0</version>
  <description>The rqt_marine_radar package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_msgs</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rqt_gui</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

